# vr2FHE_TIFS_2025

./: README.md  setup.sh
BGV/: CMakeLists.txt  execute.sh  execute_BGV_only.sh  results_BGV.cpp
FHEW/: execute.sh  execute_FHEW_only.sh  results_FHEW.cpp
TFHE/: execute.sh  execute_TFHE_only.sh  results_TFHE.cpp
